--- a/styles.css
+++ b/styles.css
@@ -180,14 +180,18 @@ h1 {
   opacity: 1;
 }
 
-.active-pattern .note-circle{
+.fretboard-grid .note-circle{
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
 
-.active-pattern .pattern-color{
+.fretboard-cell {
+  position: relative;
+}
+
+.fretboard-grid .pattern-color{
   width: 50%;
   height: 100%;
 }
